# VideoTimestamps

./: .gitignore  404.html  README.md  build_dependencies.sh  dependencies.txt  index.html  meson.build  mkdocs.yml  objects.inv  pyproject.toml  renovate.json
.github/workflows/: build_doc.yml  build_wheel.yml  meson_wrap_update.yml  publish_to_pypi.yml  run_test.yml
Algorithm conversion explanation/: index.html
Extract timestamps from video/: index.html
docs/: Algorithm conversion explanation.md  Proof algorithm - ms_to_frames.md
examples/: get_timestamps.py
reference/abc_timestamps/: index.html
reference/fps_timestamps/: index.html
reference/rounding_method/: index.html
reference/text_file_timestamps/: index.html
reference/time_type/: index.html
reference/time_unit_converter/: index.html
reference/video_provider/abc_video_provider/: index.html
reference/video_provider/best_source_video_provider/: index.html
reference/video_provider/ffms2_video_provider/: index.html
reference/video_timestamps/: index.html
search/: search_index.json
subprojects/: bestsource.wrap  ffmpeg.wrap  ffms2.wrap
subprojects/packagefiles/ffms2/: 0001.patch  0002.patch  0003.patch  meson.build
tests/: test_best_source.py  test_convert_time.py  test_extract_timestamps.py  test_fps_timestamps.py  test_text_file_timestamps.py  test_timestamps.py  test_video_timestamps.py
tests/ffprobe/: test_ffprobe.py
tests/files/: generate_test_video.py  mkv_timescale_cs.mkv  mkv_timescale_ns.mkv  mkv_timescale_us.mkv  test_video.avi  test_video.mkv  test_video_10_frames.mkv  video_without_pts_time.avi
tests/video_provider/: test_video_provider.py
video_timestamps/: __init__.py  abc_timestamps.py  abc_video_parser.py  best_source.cpp  best_source.pyi  extract_timestamps.py  fps_timestamps.py  meson.build  rounding_method.py  text_file_timestamps.py  time_type.py  timestamps.py  timestamps_factory.py  timestamps_file_parser.py  video_timestamps.py
video_timestamps/ffprobe/: ffprobe.py  timestamps.py
video_timestamps/mkvtoolnix/: exit_code.py  mkvextract.py  mkvmerge.py  timestamps.py  utils.py
video_timestamps/video_provider/: __init__.py  abc_video_provider.cpp  abc_video_provider.hpp  abc_video_provider.pyi  best_source_video_provider.cpp  best_source_video_provider.pyi  ffms2_video_provider.cpp  ffms2_video_provider.pyi  meson.build
